deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-carvilla
  labels:
    app: app-carvilla
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-carvilla
  template:
    metadata:
      labels:
        app: app-carvilla
    spec:
      containers:
      - name: c-carvilla
        image: raemondarellano/carvilla-app:1.0.0
        ports:
        - containerPort: 80
