ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-carvilla

spec:
  rules:
  - host: "my.carvilla"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-carvilla
            port:
              number: 80
